--- a/src/components/common/Cards/CardSearch/cardSearch.module.scss
+++ b/src/components/common/Cards/CardSearch/cardSearch.module.scss
@@ -8,6 +8,7 @@
         width: 66px;
         height: 50px;
         & img {
+            position: relative;
             width: 100%;
             height: 100%;
             // max-width: 56px;
