--- a/src/screens/SearchScreen/searchScreen.module.scss
+++ b/src/screens/SearchScreen/searchScreen.module.scss
@@ -1,27 +1,60 @@
 .section {
-    padding: 0;
+    margin: 0;
     display: flex;
     flex-direction: column;
     gap: $gap-medium;
 }
-.searchInfo{
+.content {
+    display: grid;
+    grid-template-columns: auto calc(100% - 274px + 10px);
+    gap: $gap-big;
+    &_switcher {
+        display: flex;
+        flex-direction: column;
+        height: fit-content;
+        gap: $gap-medium;
+        padding: 15px 10px;
+        border-radius: $border-radius-10;
+        background-color: $color-additional-background;
+        position: sticky;
+
+        top: $header-height;
+        max-height: calc(100vh - $header-height - 5px);
+        &_title {
+        }
+    }
+    &_content {
+        display: flex;
+        flex-direction: column;
+        gap: $gap-medium;
+    }
+}
+.searchInfo {
     // @extend %Text14;
     color: $color-main-grey;
 }
 .listSearch {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: $gap-medium;
     &_item {
+        display: block;
         padding: 15px 10px;
         background-color: $color-additional-background;
         border-radius: $border-radius-10;
         transition: $transition;
         border: 1px solid transparent;
-        &:hover{
+        &:hover {
             border-color: $color-main-gold;
             box-shadow: $box-shadow-default;
             transform: scale(1.005);
         }
+    }
+}
+.itemEmpty {
+    width: fit-content;
+    &_button {
+    }
+    &_icon {
     }
 }
