--- a/src/components/common/Finder/_common/DropdownListFinder/dropdownListFinder.module.scss
+++ b/src/components/common/Finder/_common/DropdownListFinder/dropdownListFinder.module.scss
@@ -28,9 +28,11 @@
         }
     }
     .list_item__additional {
-        margin: 10px 0;
-        &:last-child{
-            margin-bottom: 20px;
+        // margin: 10px 0;
+       
+        &:nth-child(4) {
+            margin-bottom: 30px;
+           
         }
         & a {
             display: grid;
