--- a/src/asset/common-styles/variables.scss
+++ b/src/asset/common-styles/variables.scss
@@ -12,6 +12,10 @@ $color-overlay: rgba(0, 0, 0, 0.3);
 $color-blur-black: rgb(79 79 79 / 50%);
 $color-main-blue_hover: #237fc6;
 
+$color-attraction-map: #28a745;
+$color-accommodation-map: #007bff;
+$color-eater-map: #ffa500;
+
 $color-gradient-bg-banner: linear-gradient(
         0deg,
         rgba(20, 17, 85, 0.12),
