--- a/src/components/common/Cards/CardMap/cardMap.module.scss
+++ b/src/components/common/Cards/CardMap/cardMap.module.scss
@@ -7,6 +7,7 @@
     background-color: $color-additional-background;
     padding: 13px 10px;
     border-radius: $border-radius-20;
+    position: relative;
 }
 .image {
     border-radius: 12px;
@@ -136,7 +137,25 @@
 .rateCafe {
     font-size: 14px;
 }
+.btnClose {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    border-radius: $border-radius-10;
 
+    padding: 5px;
+    background-color: $color-additional-background;
+    transition: $transition;
+    border: 1px solid transparent;
+    cursor: pointer;
+    &:hover {
+        border-color: $color-main-gold;
+        color: $color-main-gold;
+    }
+}
 @include mediaPhone {
     .image {
         &_type {
