--- a/src/components/common/Popup/PopupMap/popupMap.module.scss
+++ b/src/components/common/Popup/PopupMap/popupMap.module.scss
@@ -7,8 +7,9 @@
         top: 0;
         left: -100%;
         bottom: 0;
-        width: 70vw;
+        width: 100vw;
         z-index: 10;
+        padding: 20px;
         transition: $transition;
     }
 }
@@ -25,7 +26,7 @@
         border-radius: $border-radius-10;
     }
 }
-.button {
+.buttonOpen {
     &_ctn {
         position: absolute;
         top: 0;
@@ -46,6 +47,12 @@
     &:hover &_icon {
         color: $color-main-gold;
     }
+}
+.buttonClose {
+    position: absolute;
+    top: 30px;
+    right:30px;
+    z-index: 1;
 }
 @include mediaTablet {
     .image_ctn {
