--- a/src/components/common/Map/Mapbox/_common/Markers/customMarker.module.scss
+++ b/src/components/common/Map/Mapbox/_common/Markers/customMarker.module.scss
@@ -24,6 +24,7 @@
         justify-content: center;
         align-items: center;
         position: absolute;
+      
         top: 5px;
         right: 5px;
         border-radius: $border-radius-10;
@@ -52,6 +53,10 @@
     border-radius: 50%;
     transition: $transition;
     border: 1px solid transparent;
+    &_first {
+        // box-shadow: $box-shadow-default;
+        @include pulse();
+    }
     &__accommodation {
         border-color: $color-accommodation-map;
         color: $color-accommodation-map;
