fix:bags with map

--- a/src/components/common/Cards/CardMap/cardMap.module.scss
+++ b/src/components/common/Cards/CardMap/cardMap.module.scss
@@ -20,7 +20,9 @@
         height: 100%;
         width: 100%;
         aspect-ratio: 16 / 9;
-        min-width: 100%;
+
+        // min-width: 100%;
+        min-width: 170px;
     }
     &_image {
         object-fit: cover;
