fix:some bage for nastya

--- a/src/screens/(News)/NewsScreen/_components/BlockNews/blockNews.module.scss
+++ b/src/screens/(News)/NewsScreen/_components/BlockNews/blockNews.module.scss
@@ -24,6 +24,7 @@ $marginNews: 40px;
         display: flex;
         gap: $gap-small;
         flex-wrap: wrap;
+        justify-content: space-between;
     }
     &_right {
         align-items: end;
