feat: button up

--- a/src/screens/FilterScreen/_components/FilterComponent/BlockMap/blockMap.module.scss
+++ b/src/screens/FilterScreen/_components/FilterComponent/BlockMap/blockMap.module.scss
@@ -33,9 +33,14 @@
 }
 @include mediaTablet {
     .image_ctn {
-        // position: relative;
         &_image {
             display: none;
+        }
+    }
+    .buttonOpen {
+        &_ctn {
+            position: relative;
+            background-color: transparent;
         }
     }
 }
