--- a/src/asset/common-styles/extends.scss
+++ b/src/asset/common-styles/extends.scss
@@ -25,6 +25,24 @@
         min-width: 100%;
     }
 }
+%hoverBackgroundDark {
+       position: relative;
+                &::before {
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    background-color: $color-overlay;
+                    transition: $transition;
+                }
+                &:hover {
+                    &::before {
+                        background-color: transparent;
+                    }
+                }
+}
 %Title {
     font-size: 32px;
     font-weight: 600;
@@ -50,4 +68,3 @@
     font-weight: 400;
     line-height: 16.8px;
 }
-
