--- a/src/screens/EstablishmentScreen/establishmentScreen.module.scss
+++ b/src/screens/EstablishmentScreen/establishmentScreen.module.scss
@@ -86,6 +86,7 @@
     & &_list {
         margin: 48px 0;
         display: flex;
+        justify-content: space-between;
         gap: 48px;
         &_item {
             @extend %Text18;
@@ -95,15 +96,7 @@
             text-decoration: underline;
             text-underline-offset: 8px;
 
-            // padding-bottom: 10px;
-            // &::before {
-            //   content: "";
-            //   height: 1.5px;
-            //   background-color: $color-main-black;
-            //   position: absolute;
-            //   top: calc(100% + 5px);
-            //   width: 100%;
-            // }
+           
             &:hover {
                 color: $color-main-gold;
             }
@@ -121,7 +114,6 @@
         padding: 32px;
         border-radius: $border-radius-20;
         background-color: $color-additional-background;
-        min-height: 470px;
         & h4 {
             margin-bottom: 16px;
         }
@@ -211,10 +203,18 @@
     }
     .info_map {
         height: 100%;
+
         &_image {
+            &__ctn {
+                cursor: pointer;
+                border-radius: $border-radius-20;
+                @extend %hoverBackgroundDark;
+                overflow: hidden;
+            }
+
             width: 100%;
             height: 100%;
-            border-radius: $border-radius-20;
+            display: block;
             object-fit: cover;
         }
     }
